solved little gap between img and div container

--- a/style.css
+++ b/style.css
@@ -231,8 +231,9 @@ a{
     text-align: center;
 }
 
-.element img{
+.img-container img{
     width: 100%;
+    display: block;
 }
 
 .element h2{
@@ -350,6 +351,11 @@ a{
     border-radius: 1rem;
 }
 
+.popular-artists .img-container{
+    border-radius: 50%;
+    overflow: hidden;
+   
+}
 
 .popular-artists img{
     border-radius: 50%;
@@ -449,8 +455,10 @@ a{
     position: absolute;
     top: 0;
     bottom: 0;
+    
 
     width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, .4);
     display: none;
 }
